Ensure that Tip Of The Day window appears in front of the main app frame

--- a/lib/messagebundles/totd/TOTD.properties
+++ b/lib/messagebundles/totd/TOTD.properties
@@ -40,7 +40,7 @@ GENERAL_31=LimeWire is translated into dozens of <a href="http://www.limewire.co
 GENERAL_32=Can't find files you've downloaded? Try doing a search on your computer for the filename. LimeWire will only list files that are being shared or are incomplete within its Library, so if your Save directory isn't shared, LimeWire won't display it.
 GENERAL_33=Sport the LimeWire look! Visit our <a href="http://www.limewire.com/english/content/gear.shtml">LimeWire gear</a> page and purchase a t-shirt or hat! 
 GENERAL_34=Want to publish your own content? <a href="http://www.magnetmix.com">LimeWire's MagnetMix</a> offers independent artists, shareware games, software distributors and more a way to reach large audiences. <a href="http://www.magnetmix.com/form.html">Submit your content</a> today!
-GENERAL_35=Try an audio genre search!<br>Click on the 'Audio' Metadata search window, choose a genre from the drop-down box, and then press Search. Most if not all of the files returned will be from the selected genre.
+GENERAL_35=Try an audio genre search!<br>Click on the 'Audio' Metadata search window, choose a genre from the drop-down box, and then press 'Search'. Most if not all of the files returned will be from the selected genre.
 GENERAL_36=Don't know what to look for? Try a "What's New" search and see what's recently been added to the network.
 
 #####################################################################################
@@ -56,7 +56,7 @@ NOT_OSX_7=You can turn autocomplete for searching on or off by choosing 'Options
 NOT_OSX_8=Want to see dialogs for questions which you previously marked 'Do not display this message again' or 'Always Use This Answer'? Go to Tools -> Options, and check 'Revert To Default' under View -> Popups.
 NOT_OSX_9=You can ban certain words from appearing in your search results by choosing 'Options' from the 'Tools' menu and adding new words to those listed under Filters -> Keywords.
 NOT_OSX_10=You can change the columns that display search result information. Columns you can choose include, 'Title', 'Genre', 'Track', 'Length', and many more. Just right-click on the search result column headers, choose audio or video, and check the columns you want to see!
-NOT_OSX_11=Hate tooltips? Love tooltips? You can turn them on or off in most tables by right-clicking on the column headers and choosing 'More Options'. You can toggle other options here too, like whether or not to sort tables automatically and if you want the rows to be striped.
+NOT_OSX_11=Hate tool tips? Love tool tips?  You can turn them on or off in most tables by right-clicking on the column headers and choosing 'More Options'.  You can toggle other options here too, like whether or not to sort tables automatically and if you prefer the rows to be striped.
 NOT_OSX_12=You can sort uploads, downloads, etc..., by clicking on a column. The table keeps resorting as the information changes. You can turn this automatic-sorting behavior off by right-clicking on a column header, choosing 'More Options' and un-checking 'Sort Automatically'.
 NOT_OSX_13=Don't want to see the Chat (or other) columns in downloads? Right-click on the column headers and uncheck that column. You can also drag the columns around to make them appear in the order you'd like.
 NOT_OSX_14=You can tell LimeWire which downloads to start next. Right-click on the column headers in the download area and check the 'Priority' column. Select the download you want to start next and click the up arrow until it's at the top!
@@ -78,7 +78,7 @@ OSX_11=You can turn autocomplete for searching on or off by choosing 'Preference
 OSX_12=Want to see dialogs for questions which you previously marked 'Do not display this message again' or 'Always Use This Answer'? Go to LimeWire -> Preferences, and check 'Revert To Default' under View -> Popups.
 OSX_13=You can ban certain words from appearing in your search results by choosing 'Preferences' from the 'LimeWire' menu and adding new words to those listed under Filters -> Keywords.
 OSX_14=You can change the columns that display search result information. Columns you can choose from include, 'Title', 'Genre', 'Track', 'Length', and many more. Just control-click on the search result column headers, choose audio or video, and check the columns you want to see!
-OSX_15=Hate tooltips? Love tooltips? You can turn them on or off in most tables by control-clicking on the column headers and choosing 'More Options'. You can toggle other options here too, like whether or not to sort tables automatically and if you want the rows to be striped.
+OSX_15=Hate tool tips?  Love tool tips?  You can turn them on or off in most tables by control-clicking on the column headers and choosing 'More Options'.  You can toggle other options here too, like whether or not to sort tables automatically and if you prefer the rows to be striped.
 OSX_16=You can sort uploads, downloads, etc..., by clicking on a column. The table keeps resorting as the information changes. You can turn this automatic-sorting behavior off by control-clicking on a column header, choosing 'More Options' and un-checking 'Sort Automatically'.
 OSX_17=Don't want to see the Chat (or other) columns in downloads? Control-click on the column headers and uncheck that column. You can also drag the columns around to make them appear in the order you'd like.
 
