some framework for connecting without extra threads.  odd NPE right now.

--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -114,8 +114,8 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.ConnectionWatchdog=ALL
 #log4j.logger.com.limegroup.gnutella.connection.ConnectionChecker=ALL
 #log4j.logger.com.limegroup.gnutella.BrowseHostHandler=ALL
-#log4j.logger.com.limegroup.gnutella.bootstrap=ALL
-#log4j.logger.com.limegroup.gnutella.HostCatcher=ALL
+log4j.logger.com.limegroup.gnutella.bootstrap=ALL
+log4j.logger.com.limegroup.gnutella.HostCatcher=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.VerifyingFile=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.HTTPDownloader=ALL
 #log4j.logger.com.limegroup.gnutella.downloader=ALL
@@ -146,4 +146,4 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.Acceptor=ALL
 #log4j.logger.com.limegroup.gnutella.RemoteFileDesc=ALL
 #log4j.logger.com.limegroup.gnutella.settings=ALL
-log4j.logger.com.limegroup.gnutella.licenses=ALL
+#log4j.logger.com.limegroup.gnutella.licenses=ALL
