offload handshaking to a different thread, fix a few things.

--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -105,17 +105,19 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 
 #log4j.logger.com.limegroup.gnutella.search.SearchResultHandler.level=DEBUG
 #log4j.logger.com.limegroup.gnutella.messages.vendor.HeadPong=All
-#log4j.logger.com.limegroup.gnutella.Connection=ALL
+log4j.logger.com.limegroup.gnutella.Connection=ALL
 #log4j.logger.com.limegroup.gnutella.gui=DEBUG
 #log4j.logger.com.limegroup.gnutella.gui.iTunesMediator=DEBUG
 #log4j.logger.com.limegroup.gnutella.bugs=ALL
-#log4j.logger.com.limegroup.gnutella.ConnectionManager=ALL  
-#log4j.logger.com.limegroup.gnutella.ManagedConnection=ALL
+log4j.logger.com.limegroup.gnutella.ConnectionManager=ALL  
+log4j.logger.com.limegroup.gnutella.io=ALL
+log4j.logger.com.limegroup.gnutella.NIODispatcher=ALL
+log4j.logger.com.limegroup.gnutella.ManagedConnection=ALL
 #log4j.logger.com.limegroup.gnutella.ConnectionWatchdog=ALL
 #log4j.logger.com.limegroup.gnutella.connection.ConnectionChecker=ALL
 #log4j.logger.com.limegroup.gnutella.BrowseHostHandler=ALL
-log4j.logger.com.limegroup.gnutella.bootstrap=ALL
-log4j.logger.com.limegroup.gnutella.HostCatcher=ALL
+#log4j.logger.com.limegroup.gnutella.bootstrap=ALL
+#log4j.logger.com.limegroup.gnutella.HostCatcher=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.VerifyingFile=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.HTTPDownloader=ALL
 #log4j.logger.com.limegroup.gnutella.downloader=ALL
