Fixing the FileUtilsTest on Mac OS X which fails with an UnsatisfiedLinkError because the java.library.path is not correct (OSX uses colons as path separator rather than semicolons).

--- a/components/gnutella-core/src/test/build.xml
+++ b/components/gnutella-core/src/test/build.xml
@@ -8,7 +8,7 @@
   <property name="jars"            value="${libdir}/jars"/>
   <property name="messagebundles"  value="${libdir}/messagebundles"/>
   <property name="nativeDir"       value="${libdir}/native"/> 
-  <property name="native"          value="${nativeDir}/windows;${nativeDir}/osx;${nativeDir}"/> 
+  <property name="native"          value="${nativeDir}/windows${path.separator}${nativeDir}/osx${path.separator}${nativeDir}"/> 
   <property name="testslib"        value="lib"/>
   <property name="reports"         value="reports"/>
   <property name="datadir"         value="${basedir}"/>
