convert pushes to using nio for connecting -- reduces number of threads for failed push attempts.

--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -141,7 +141,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.DownloadManager=ALL
 #log4j.logger.com.limegroup.gnutella.UDPService=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.ManagedDownloader=ALL
-log4j.logger.com.limegroup.gnutella.downloader.DownloadWorker=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.DownloadWorker=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.LegacyRanker=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.PingRanker=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
@@ -150,6 +150,7 @@ log4j.logger.com.limegroup.gnutella.downloader.DownloadWorker=ALL
 #log4j.logger.com.limegroup.gnutella.Acceptor=ALL
 #log4j.logger.com.limegroup.gnutella.RemoteFileDesc=ALL
 #log4j.logger.com.limegroup.gnutella.settings=ALL
+log4j.logger.com.limegroup.gnutella.PushManager=ALL
 #log4j.logger.httpclient.wire=ALL
 #log4j.logger.org.apache.commons.httpclient=ALL
 #log4j.logger.com.limegroup.gnutella.http=ALL
