--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -106,7 +106,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 
 #log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
-#log4j.logger.com.limegroup.gnutella.search.SearchResultHandler.level=DEBUG
+#log4j.logger.com.limegroup.gnutella.search.SearchResultHandler=ALL
 #log4j.logger.com.limegroup.gnutella.messages.vendor.HeadPong=All
 #log4j.logger.com.limegroup.gnutella.Connection=ALL
 #log4j.logger.com.limegroup.gnutella.gui=DEBUG
