split Sockets into a SimpleSocketController and a LimitedSocketController, with Sockets choosing one based on the OS.  Added tests for LimitedSocketController & tests for proxies w/ non-blocking connects.

--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -101,7 +101,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 # log4j.logger.com.limegroup.gnutella.gui.GUIMediator=INFO
 # would turn logging for the GUIMediator class to the INFO level
 #
-# log4j.logger.httpclient.wire=ALL
+#log4j.logger.httpclient.wire=ALL
 # will log all information read/written from/to the network using HttpClient
 
 #log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
@@ -154,3 +154,4 @@ log4j.logger.com.limegroup.gnutella.PushManager=ALL
 #log4j.logger.httpclient.wire=ALL
 #log4j.logger.org.apache.commons.httpclient=ALL
 #log4j.logger.com.limegroup.gnutella.http=ALL
+log4j.logger.com.limegroup.gnutella.util.ProxyUtils=ALL
