--- a/components/gnutella-core/src/test/build.xml
+++ b/components/gnutella-core/src/test/build.xml
@@ -137,7 +137,8 @@
 	      srcdir="${coredir}:${guidir}:${basedir}"
 	      destdir="${builddir}" nowarn="${NOWARN}"
 		  excludes="macosx/**, windows/**"
-		  fork="true" memoryMaximumSize="100m">
+		  fork="true" memoryMaximumSize="100m"
+		source="1.4" target="1.4">
 
      <classpath refid="default.classpath" />
    </javac>
