some bugfixes & a bunch of more tests.

--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -150,8 +150,9 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.Acceptor=ALL
 #log4j.logger.com.limegroup.gnutella.RemoteFileDesc=ALL
 #log4j.logger.com.limegroup.gnutella.settings=ALL
-log4j.logger.com.limegroup.gnutella.PushManager=ALL
+#log4j.logger.com.limegroup.gnutella.PushManager=ALL
 #log4j.logger.httpclient.wire=ALL
 #log4j.logger.org.apache.commons.httpclient=ALL
 #log4j.logger.com.limegroup.gnutella.http=ALL
-log4j.logger.com.limegroup.gnutella.util.ProxyUtils=ALL
+#log4j.logger.com.limegroup.gnutella.util.ProxyUtils=ALL
+#log4j.logger.com.limegroup.gnutella.io=ALL
