commiting bucket split count bug

--- a/components/mojito/log4j.properties
+++ b/components/mojito/log4j.properties
@@ -114,6 +114,6 @@ log4j.logger.de.kapsi.net.kademlia.handler.response=ERROR
 log4j.logger.de.kapsi.net.kademlia.messages=ERROR
 log4j.logger.de.kapsi.net.kademlia.messages.request=ERROR
 log4j.logger.de.kapsi.net.kademlia.messages.response=ERROR
-log4j.logger.de.kapsi.net.kademlia.routing=ALL
+log4j.logger.de.kapsi.net.kademlia.routing=ERROR
 
 
