--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -137,7 +137,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.search=ALL
 #log4j.logger.com.limegroup.gnutella.downloader=ALL
 #log4j.logger.com.limegroup.gnutella.udpconnect=ALL
-log4j.logger.com.limegroup.gnutella.udpconnect.UDPMultiplexor=ALL
+#log4j.logger.com.limegroup.gnutella.udpconnect.UDPMultiplexor=ALL
 #log4j.logger.com.limegroup.gnutella.udpconnect.UStandalone=ALL
 #log4j.logger.com.limegroup.gnutella.udpconnect.UDPBufferedOutputStream=ALL
 #log4j.logger.com.limegroup.gnutella.Acceptor=ALL
