--- a/components/mojito/log4j.properties
+++ b/components/mojito/log4j.properties
@@ -103,17 +103,17 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M[%L] - %m%
 # log4j.logger.httpclient.wire=ALL
 # will log all information read/written from/to the network using HttpClient
 
-log4j.logger.de.kapsi.net.kademlia=ALL
-log4j.logger.de.kapsi.net.kademlia.db=ALL
-log4j.logger.de.kapsi.net.kademlia.event=ALL
-log4j.logger.de.kapsi.net.kademlia.io=ALL
-log4j.logger.de.kapsi.net.kademlia.handler=ALL
-log4j.logger.de.kapsi.net.kademlia.handler.DefaultMessageHandler=ALL
-log4j.logger.de.kapsi.net.kademlia.handler.request=ALL
-log4j.logger.de.kapsi.net.kademlia.handler.response=ALL
-log4j.logger.de.kapsi.net.kademlia.messages=ALL
-log4j.logger.de.kapsi.net.kademlia.messages.request=ALL
-log4j.logger.de.kapsi.net.kademlia.messages.response=ALL
+log4j.logger.de.kapsi.net.kademlia=ERROR
+log4j.logger.de.kapsi.net.kademlia.db=ERROR
+log4j.logger.de.kapsi.net.kademlia.event=ERROR
+log4j.logger.de.kapsi.net.kademlia.io=ERROR
+log4j.logger.de.kapsi.net.kademlia.handler=ERROR
+log4j.logger.de.kapsi.net.kademlia.handler.DefaultMessageHandler=ERROR
+log4j.logger.de.kapsi.net.kademlia.handler.request=ERROR
+log4j.logger.de.kapsi.net.kademlia.handler.response=ERROR
+log4j.logger.de.kapsi.net.kademlia.messages=ERROR
+log4j.logger.de.kapsi.net.kademlia.messages.request=ERROR
+log4j.logger.de.kapsi.net.kademlia.messages.response=ERROR
 log4j.logger.de.kapsi.net.kademlia.routing=ALL
 
 
