Ping nodes added to the routing table if they are unknown to be alive. Trigger store immediatly (don't wait for the KeyValuePublisher).

--- a/components/mojito/log4j.properties
+++ b/components/mojito/log4j.properties
@@ -109,11 +109,11 @@ log4j.logger.de.kapsi.net.kademlia.event=ERROR
 log4j.logger.de.kapsi.net.kademlia.io=ERROR
 log4j.logger.de.kapsi.net.kademlia.handler=ERROR
 log4j.logger.de.kapsi.net.kademlia.handler.DefaultMessageHandler=ERROR
-log4j.logger.de.kapsi.net.kademlia.handler.request=ERROR
-log4j.logger.de.kapsi.net.kademlia.handler.response=ERROR
+log4j.logger.de.kapsi.net.kademlia.handler.request=ALL
+log4j.logger.de.kapsi.net.kademlia.handler.response=ALL
 log4j.logger.de.kapsi.net.kademlia.messages=ERROR
 log4j.logger.de.kapsi.net.kademlia.messages.request=ERROR
 log4j.logger.de.kapsi.net.kademlia.messages.response=ERROR
-log4j.logger.de.kapsi.net.kademlia.routing=ERROR
+log4j.logger.de.kapsi.net.kademlia.routing=ALL
 
 
