--- a/components/mojito/log4j.properties
+++ b/components/mojito/log4j.properties
@@ -110,7 +110,7 @@ log4j.logger.de.kapsi.net.kademlia.io=ERROR
 log4j.logger.de.kapsi.net.kademlia.handler=ERROR
 log4j.logger.de.kapsi.net.kademlia.handler.DefaultMessageHandler=ERROR
 log4j.logger.de.kapsi.net.kademlia.handler.request=ERROR
-log4j.logger.de.kapsi.net.kademlia.handler.response=ALL
+log4j.logger.de.kapsi.net.kademlia.handler.response=ERROR
 log4j.logger.de.kapsi.net.kademlia.messages=ERROR
 log4j.logger.de.kapsi.net.kademlia.messages.request=ERROR
 log4j.logger.de.kapsi.net.kademlia.messages.response=ERROR
