--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -140,11 +140,15 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.Acceptor=ALL
 #log4j.logger.com.limegroup.gnutella.DownloadManager=ALL
 #log4j.logger.com.limegroup.gnutella.UDPService=ALL
-#log4j.logger.com.limegroup.gnutella.downloader.ManagedDownloader=ALL
-#log4j.logger.com.limegroup.gnutella.downloader.DownloadWorker=ALL
+log4j.logger.com.limegroup.gnutella.downloader.ManagedDownloader=ALL
+log4j.logger.com.limegroup.gnutella.downloader.DownloadWorker=ALL
+log4j.logger.com.limegroup.gnutella.downloader.HTTPDownloader=ALL
+log4j.logger.com.limegroup.gnutella.io.IOStateMachine=ALL
+log4j.logger.com.limegroup.gnutella.tigertree.ThexReader=ALL
+log4j.logger.com.limegroup.gnutella.http.ReadHeadersIOState=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.LegacyRanker=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.PingRanker=ALL
-#log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
+log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
 #log4j.logger.com.limegroup.gnutella.simpp=ALL
 #log4j.logger.com.limegroup.gnutella.Acceptor=ALL
