Global lookup stats. Correct hop count.

--- a/components/mojito/build.xml
+++ b/components/mojito/build.xml
@@ -28,11 +28,11 @@
 		<delete file="planetlab.jar"/>
 		<jar destfile="planetlab.jar" 
 			basedir="${basedir}"
-			includes="com/**, de/**, lib/**"
+			includes="com/**, de/**"
 			excludes="**/bin/**">
 			<manifest>
 			 	<attribute name="Main-Class" value="com.limegroup.gnutella.dht.tests.PlanetLab"/>
-			 	<attribute name="Class-Path" value=". lib/commons-logging.jar lib/log4j.jar"/>
+			 	<attribute name="Class-Path" value=". commons-logging.jar log4j.jar"/>
 			</manifest>
 		</jar>
 	</target>
