Relaxed query key sending condition.

--- a/components/mojito/log4j.properties
+++ b/components/mojito/log4j.properties
@@ -74,6 +74,7 @@ log4j.appender.socket=org.apache.log4j.varia.NullAppender
 
 # stdout is set to be ConsoleAppender sending its output to System.out
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.target=System.err
 
 # stdout uses PatternLayout.
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -110,7 +111,7 @@ log4j.logger.de.kapsi.net.kademlia.io=ERROR
 log4j.logger.de.kapsi.net.kademlia.handler=ERROR
 log4j.logger.de.kapsi.net.kademlia.handler.DefaultMessageHandler=ERROR
 log4j.logger.de.kapsi.net.kademlia.handler.request=ERROR
-log4j.logger.de.kapsi.net.kademlia.handler.response=ERROR
+log4j.logger.de.kapsi.net.kademlia.handler.response=ALL
 log4j.logger.de.kapsi.net.kademlia.messages=ERROR
 log4j.logger.de.kapsi.net.kademlia.messages.request=ERROR
 log4j.logger.de.kapsi.net.kademlia.messages.response=ERROR
