--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -126,8 +126,8 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.downloader=ALL
 #log4j.logger.com.limegroup.gnutella.UploadManager=ALL
 #log4j.logger.com.limegroup.gnutella.uploader.HTTPUploader=ALL
-#log4j.logger.com.limegroup.gnutella.dime=ALL
-#log4j.logger.com.limegroup.gnutella.tigertree=ALL
+log4j.logger.com.limegroup.gnutella.dime=ALL
+log4j.logger.com.limegroup.gnutella.tigertree=ALL
 #log4j.logger.com.limegroup.gnutella.tigertree.HashTree=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.VerifyingFile=ALL
 #log4j.logger.com.limegroup.gnutella.SavedFileManager=ALL
