--- a/components/mojito/log4j.properties
+++ b/components/mojito/log4j.properties
@@ -105,7 +105,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M[%L] - %m%
 # will log all information read/written from/to the network using HttpClient
 
 log4j.logger.de.kapsi.net.kademlia=ERROR
-log4j.logger.de.kapsi.net.kademlia.db=ERROR
+log4j.logger.de.kapsi.net.kademlia.db=ALL
 log4j.logger.de.kapsi.net.kademlia.event=ERROR
 log4j.logger.de.kapsi.net.kademlia.io=ERROR
 log4j.logger.de.kapsi.net.kademlia.handler=ERROR
