--- a/components/mojito/log4j.properties
+++ b/components/mojito/log4j.properties
@@ -74,7 +74,7 @@ log4j.appender.socket=org.apache.log4j.varia.NullAppender
 
 # stdout is set to be ConsoleAppender sending its output to System.out
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.target=System.err
+#log4j.appender.stdout.target=System.err
 
 # stdout uses PatternLayout.
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -105,7 +105,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M[%L] - %m%
 # will log all information read/written from/to the network using HttpClient
 
 log4j.logger.de.kapsi.net.kademlia=ERROR
-log4j.logger.de.kapsi.net.kademlia.db=ALL
+log4j.logger.de.kapsi.net.kademlia.db=ERROR
 log4j.logger.de.kapsi.net.kademlia.event=ERROR
 log4j.logger.de.kapsi.net.kademlia.io=ERROR
 log4j.logger.de.kapsi.net.kademlia.handler=ERROR
