--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -140,6 +140,7 @@ log4j.logger.com.limegroup.gnutella.tigertree=ALL
 #log4j.logger.com.limegroup.gnutella.Acceptor=ALL
 #log4j.logger.com.limegroup.gnutella.DownloadManager=ALL
 #log4j.logger.com.limegroup.gnutella.UDPService=ALL
+log4j.logger.com.limegroup.gnutella.DownloadManager=ALL
 log4j.logger.com.limegroup.gnutella.downloader.ManagedDownloader=ALL
 log4j.logger.com.limegroup.gnutella.downloader.DownloadWorker=ALL
 log4j.logger.com.limegroup.gnutella.downloader.HTTPDownloader=ALL
