--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -145,12 +145,13 @@ log4j.logger.com.limegroup.gnutella.downloader.ManagedDownloader=ALL
 log4j.logger.com.limegroup.gnutella.downloader.DownloadWorker=ALL
 log4j.logger.com.limegroup.gnutella.downloader.HTTPDownloader=ALL
 log4j.logger.com.limegroup.gnutella.io.IOStateMachine=ALL
-log4j.logger.com.limegroup.gnutella.io.NIODispatcher=DEBUG
+#log4j.logger.com.limegroup.gnutella.io.NIODispatcher=DEBUG
 log4j.logger.com.limegroup.gnutella.tigertree.ThexReader=ALL
 log4j.logger.com.limegroup.gnutella.http.ReadHeadersIOState=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.LegacyRanker=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.PingRanker=ALL
 log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
+log4j.logger.com.limegroup.gnutella.UploadManager=ALL
 log4j.logger.com.limegroup.gnutella.io.ThrottleReader=ALL
 log4j.logger.com.limegroup.gnutella.io.NBThrottle=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
