Do not store forward to hosts if they have not started a new instance. Do not store forward values back to their originators. Context constructor now requires a name (so that threads can be named properly). Fixed PlanetLab build script.

--- a/components/mojito/build.xml
+++ b/components/mojito/build.xml
@@ -38,7 +38,7 @@
 				compress="false">
 			<manifest>
 			 	<attribute name="Main-Class" value="com.limegroup.gnutella.dht.tests.PlanetLab"/>
-			 	<attribute name="Class-Path" value=". commons-logging.jar log4j.jar"/>
+			 	<attribute name="Class-Path" value=". commons-logging.jar log4j.jar core.jar"/>
 			</manifest>
 		</jar>
 	</target>
