turned off all logging.

--- a/components/gnutella-core/src/test/log4j.properties
+++ b/components/gnutella-core/src/test/log4j.properties
@@ -126,8 +126,8 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.downloader=ALL
 #log4j.logger.com.limegroup.gnutella.UploadManager=ALL
 #log4j.logger.com.limegroup.gnutella.uploader.HTTPUploader=ALL
-log4j.logger.com.limegroup.gnutella.dime=ALL
-log4j.logger.com.limegroup.gnutella.tigertree=ALL
+#log4j.logger.com.limegroup.gnutella.dime=ALL
+#log4j.logger.com.limegroup.gnutella.tigertree=ALL
 #log4j.logger.com.limegroup.gnutella.tigertree.HashTree=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.VerifyingFile=ALL
 #log4j.logger.com.limegroup.gnutella.SavedFileManager=ALL
@@ -140,20 +140,20 @@ log4j.logger.com.limegroup.gnutella.tigertree=ALL
 #log4j.logger.com.limegroup.gnutella.Acceptor=ALL
 #log4j.logger.com.limegroup.gnutella.DownloadManager=ALL
 #log4j.logger.com.limegroup.gnutella.UDPService=ALL
-log4j.logger.com.limegroup.gnutella.DownloadManager=ALL
-log4j.logger.com.limegroup.gnutella.downloader.ManagedDownloader=ALL
-log4j.logger.com.limegroup.gnutella.downloader.DownloadWorker=ALL
-log4j.logger.com.limegroup.gnutella.downloader.HTTPDownloader=ALL
-log4j.logger.com.limegroup.gnutella.io.IOStateMachine=ALL
+#log4j.logger.com.limegroup.gnutella.DownloadManager=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.ManagedDownloader=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.DownloadWorker=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.HTTPDownloader=ALL
+#log4j.logger.com.limegroup.gnutella.io.IOStateMachine=ALL
 #log4j.logger.com.limegroup.gnutella.io.NIODispatcher=DEBUG
-log4j.logger.com.limegroup.gnutella.tigertree.ThexReader=ALL
-log4j.logger.com.limegroup.gnutella.http.ReadHeadersIOState=ALL
+#log4j.logger.com.limegroup.gnutella.tigertree.ThexReader=ALL
+#log4j.logger.com.limegroup.gnutella.http.ReadHeadersIOState=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.LegacyRanker=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.PingRanker=ALL
-log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
-log4j.logger.com.limegroup.gnutella.UploadManager=ALL
-log4j.logger.com.limegroup.gnutella.io.ThrottleReader=ALL
-log4j.logger.com.limegroup.gnutella.io.NBThrottle=ALL
+#log4j.logger.com.limegroup.gnutella.downloader.DownloadTest=ALL
+#log4j.logger.com.limegroup.gnutella.UploadManager=ALL
+#log4j.logger.com.limegroup.gnutella.io.ThrottleReader=ALL
+#log4j.logger.com.limegroup.gnutella.io.NBThrottle=ALL
 #log4j.logger.com.limegroup.gnutella.downloader.TestUploader=ALL
 #log4j.logger.com.limegroup.gnutella.simpp=ALL
 #log4j.logger.com.limegroup.gnutella.Acceptor=ALL
