SupernodeAssigner to NodeAssigner => Promote a node to Ultrapeer or DHT capable status. DHT manager controls Mojito and gets callbacks for network status changes (firewall, address, etc.). Fixed a possible NPE on Context.setFirewall

--- a/components/mojito/build.xml
+++ b/components/mojito/build.xml
@@ -3,14 +3,16 @@
     <description>MojitoDHT</description>
 
 	<property name="basedir" value="."/>
-	<property name="jars" value="${basedir}/lib"/>
+	<property name="coredir" value="../core"/>
+	<property name="lib" value="../lib"/>
+	<property name="jars" value="${lib}/jars"/>
 		
 	<path id="default.classpath" >
 		<fileset dir="${jars}" includes="**/*.jar"/>
 	</path>
 	
     <target name="build">
-	    	<javac srcdir="${basedir}" 
+	    	<javac srcdir="${basedir}:${coredir}" 
 				destdir="${basedir}"
 		    		target="1.4"
 		    		source="1.4"
