Fixing properties file

--- a/components/mojito/log4j.properties
+++ b/components/mojito/log4j.properties
@@ -104,17 +104,15 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M[%L] - %m%
 # log4j.logger.httpclient.wire=ALL
 # will log all information read/written from/to the network using HttpClient
 
-log4j.logger.de.kapsi.net.kademlia=ERROR
-log4j.logger.de.kapsi.net.kademlia.db=ERROR
-log4j.logger.de.kapsi.net.kademlia.event=ERROR
-log4j.logger.de.kapsi.net.kademlia.io=ERROR
-log4j.logger.de.kapsi.net.kademlia.handler=ERROR
-log4j.logger.de.kapsi.net.kademlia.handler.DefaultMessageHandler=ERROR
-log4j.logger.de.kapsi.net.kademlia.handler.request=ERROR
-log4j.logger.de.kapsi.net.kademlia.handler.response=ERROR
-log4j.logger.de.kapsi.net.kademlia.messages=ERROR
-log4j.logger.de.kapsi.net.kademlia.messages.request=ERROR
-log4j.logger.de.kapsi.net.kademlia.messages.response=ERROR
-log4j.logger.de.kapsi.net.kademlia.routing=ERROR
-
-
+log4j.logger.com.limegroup.mojito=ERROR
+log4j.logger.com.limegroup.mojito.db=ERROR
+log4j.logger.com.limegroup.mojito.event=ERROR
+log4j.logger.com.limegroup.mojito.io=ERROR
+log4j.logger.com.limegroup.mojito.handler=ERROR
+log4j.logger.com.limegroup.mojito.handler.DefaultMessageHandler=ERROR
+log4j.logger.com.limegroup.mojito.handler.request=ERROR
+log4j.logger.com.limegroup.mojito.handler.response=ERROR
+log4j.logger.com.limegroup.mojito.messages=ERROR
+log4j.logger.com.limegroup.mojito.messages.request=ERROR
+log4j.logger.com.limegroup.mojito.messages.response=ERROR
+log4j.logger.com.limegroup.mojito.routing=ERROR
