--- a/components/gnutella-core/src/test/build.xml
+++ b/components/gnutella-core/src/test/build.xml
@@ -4,7 +4,7 @@
   <property name="builddir"        value="build"/>
   <property name="guidir"          value="../gui"/>
   <property name="coredir"         value="../core"/>
-  <property name="mojitodir"         value="../mojito"/>
+  <property name="mojitodir"         value="../mojito/src/java"/>
   <property name="libdir"          value="../lib"/>
   <property name="jars"            value="${libdir}/jars"/>
   <property name="messagebundles"  value="${libdir}/messagebundles"/>
