LWC-4252 - Show more peer info about torrents
-Painting

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -494,6 +494,7 @@ FileInfoGeneralPanel.smallFont=DIALOG-NORMAL-11
 FileInfoGeneralPanel.mediumFont=DIALOG-NORMAL-12
 FileInfoGeneralPanel.headerFont=DIALOG-BOLD-17
 
+FileInfoTransfersPanel.lockIcon=icons/lock.png
 FileInfoTransfersPanel.foreground=#313131
 FileInfoTransfersPanel.smallFont=DIALOG-NORMAL-11
 FileInfoTransfersPanel.headerFont=DIALOG-BOLD-17
