--- a/.classpath
+++ b/.classpath
@@ -33,6 +33,7 @@
 	<classpathentry kind="src" output="components/io/build/tests" path="components/io/src/test/java"/>
 	<classpathentry kind="src" output="components/io/build/test-common" path="components/io/src/test-common/java"/>
 	<classpathentry kind="src" output="components/libtorrent/build/classes" path="components/libtorrent/src/main/java"/>
+	<classpathentry kind="src" output="components/libtorrent/build/tests" path="components/libtorrent/src/test/java"/>
 	<classpathentry kind="src" output="components/lwsserver/build/classes" path="components/lwsserver/src/main/java"/>
 	<classpathentry kind="src" output="components/lwsserver/build/tests" path="components/lwsserver/src/test/java"/>
 	<classpathentry kind="src" output="components/lwsserver/build/test-common" path="components/lwsserver/src/test-common/java"/>
