--- a/components/promotion/ivy.xml
+++ b/components/promotion/ivy.xml
@@ -12,6 +12,7 @@
         <dependency org="org.limewire" name="geocode" rev="latest.integration" conf="compile,runtime"/>
         <dependency org="org.limewire" name="security" rev="latest.integration" conf="compile,runtime"/>
         <dependency org="org.limewire" name="http" rev="latest.integration" conf="compile,runtime"/>
+        <dependency org="org.limewire" name="core-api" rev="latest.integration" conf="compile,runtime"/>
         
         <dependency org="none" name="hsqldb" rev="${hsqldb.version}" conf="compile,runtime"/>
         <dependency org="none" name="httpcore" rev="${httpcore.version}" conf="compile,runtime"/>
