--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -1090,6 +1090,14 @@ IconLabelRenderer.libraryIcon = icons/library.png
 IconLabelRenderer.disabledForegroundColor = 128,128,128
 IconLabelRenderer.font = DIALOG-PLAIN-11
 
+StoreRenderer.albumIcon = icons/store/file_album.png
+StoreRenderer.audioIcon = icons/store/file_audio.png
+StoreRenderer.albumCollapsedIcon = icons/store/album_collapsed.png
+StoreRenderer.albumExpandedIcon = icons/store/album_expanded.png
+StoreRenderer.classicBuyIcon = icons/store/classic_buy_btn.png
+StoreRenderer.classicPauseIcon = icons/store/classic_pause_btn.png
+StoreRenderer.classicPlayIcon = icons/store/classic_play_btn.png
+
 BrowseStatusPanel.warningIcon = icons/warning.png
 BrowseStatusPanel.arcWidth = 13
 BrowseStatusPanel.arcHeight = 13
