--- a/components/libtorrent/ivy.xml
+++ b/components/libtorrent/ivy.xml
@@ -9,24 +9,16 @@
 		<artifact name="libtorrent" conf="master" />
 	</publications>
 	<dependencies>
-		<dependency org="org.limewire" name="common" rev="latest.integration"
-			conf="compile,runtime" />
-		<dependency org="org.limewire" name="bittorrent-api" rev="latest.integration"
-			conf="compile,runtime" />
-		<dependency org="org.limewire" name="core-api" rev="latest.integration"
-			conf="compile,runtime" />
-		<dependency org="org.limewire" name="io" rev="latest.integration"
-			conf="compile,runtime" />
-		<dependency org="org.limewire" name="security" rev="latest.integration"
-			conf="compile,runtime" />
-		<dependency org="none" name="jna" rev="${jna.version}"
-			conf="compile,runtime" />
-		<dependency org="none" name="commons-logging" rev="${commons-logging.version}"
-			conf="compile,runtime" />
-		<dependency org="none" name="guice" rev="${guice.version}"
-			conf="compile,runtime" />
+		<dependency org="org.limewire" name="common" rev="latest.integration" conf="compile,runtime" />
+		<dependency org="org.limewire" name="bittorrent-api" rev="latest.integration" conf="compile,runtime" />
+		<dependency org="org.limewire" name="core-api" rev="latest.integration" conf="compile,runtime" />
+		<dependency org="org.limewire" name="io" rev="latest.integration" conf="compile,runtime" />
+		<dependency org="org.limewire" name="security" rev="latest.integration" conf="compile,runtime" />
+		<dependency org="none" name="jna" rev="${jna.version}" conf="compile,runtime" />
+		<dependency org="none" name="commons-logging" rev="${commons-logging.version}" conf="compile,runtime" />
+		<dependency org="none" name="guice" rev="${guice.version}" conf="compile,runtime" />
+		<dependency org="none" name="google-collect" rev="${google-collect.version}" conf="compile,runtime" />
 
-		<dependency org="org.limewire" name="common" rev="latest.integration"
-			conf="test, test-common->master(*), test-common" />
+		<dependency org="org.limewire" name="common" rev="latest.integration" conf="test, test-common->master(*), test-common" />
 	</dependencies>
 </ivy-module>
