Adding select all/non option to the bittorrent files panel.

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -486,6 +486,8 @@ FileInfoBittorrentOverviewPanel.smallFont=DIALOG-NORMAL-11
 FileInfoBittorrentOverviewPanel.smallBoldFont=DIALOG-BOLD-11
 FileInfoBittorrentOverviewPanel.headerFont=DIALOG-BOLD-18
 
+FileInfoBittorrentPanel.selectFont=DIALOG-PLAIN-11
+
 TorrentSelectorPanel.foreground=#313131
 TorrentSelectorPanel.headerFont=DIALOG-BOLD-13
 
