File info upgrades: LWC-4254 - Initial pieces view work pending rivisions LWC-4252 - Changes to peer view table code following the code review
(the two jiras got crossed up so commiting together)

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -505,6 +505,14 @@ FileInfoSharingPanel.headerFont= DIALOG-BOLD-17
 FileInfoSharingPanel.publicIcon = icons/file_sharedlist_p2p.png
 FileInfoSharingPanel.listSharedIcon = icons/file_sharedlist_friend.png
 
+FileInfoPiecesPanel.foreground = #313131
+FileInfoPiecesPanel.smallFont = DIALOG-NORMAL-11
+FileInfoPiecesPanel.legendBackground = #e2e2e2
+FileInfoPiecesPanel.downloadedForeground = #3071e5
+FileInfoPiecesPanel.pendingForeground = #ffffff
+FileInfoPiecesPanel.activeForeground = #4dc50c
+FileInfoPiecesPanel.unavailableForeground = #c6130f
+
 PriorityRendererEditor.lowestPriorityIcon=icons/priority_low.png
 PriorityRendererEditor.normalPriorityIcon=icons/priority_normal.png
 PriorityRendererEditor.highestPriorityIcon=icons/priority_highest.png
