add gnutella support to pieces view.

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -509,7 +509,7 @@ FileInfoPiecesPanel.foreground = #313131
 FileInfoPiecesPanel.smallFont = DIALOG-NORMAL-11
 FileInfoPiecesPanel.legendBackground = #e2e2e2
 FileInfoPiecesPanel.downloadedForeground = #3071e5
-FileInfoPiecesPanel.pendingForeground = #ffffff
+FileInfoPiecesPanel.availableForeground = #ffffff
 FileInfoPiecesPanel.activeForeground = #4dc50c
 FileInfoPiecesPanel.unavailableForeground = #c6130f
 
