revised download renderers to display AVG update item

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -328,6 +328,9 @@ DragPanel.dragLabelFont = DIALOG-BOLD-11
 #Table cell rendering settings
 DownloadTitleRenderer.warningIcon = icons/warning.png
 DownloadTitleRenderer.downloadingIcon = icons/downloads.png
+DownloadTitleRenderer.antiVirusIcon = icons/avg_logo.png
+
+DownloadMessageRendererEditor.infoIcon = icons/info.png
 
 TransferRendererResources.font = DIALOG-PLAIN-11
 TransferRendererResources.foreground = #313131
