implemented AVG warning dialogs

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -328,9 +328,20 @@ DragPanel.dragLabelFont = DIALOG-BOLD-11
 #Table cell rendering settings
 DownloadTitleRenderer.warningIcon = icons/warning.png
 DownloadTitleRenderer.downloadingIcon = icons/downloads.png
-DownloadTitleRenderer.antiVirusIcon = icons/avg_logo.png
+DownloadTitleRenderer.antivirusIcon = icons/avg_logo.png
 
 DownloadMessageRendererEditor.infoIcon = icons/info.png
+
+AVInfoPanel.doNotShowFont = DIALOG-PLAIN-10
+AVInfoPanel.doNotShowForeground = #313131
+AVInfoPanel.headingFont = DIALOG-BOLD-18
+AVInfoPanel.headingForeground = #313131
+AVInfoPanel.messageFont = DIALOG-PLAIN-11
+AVInfoPanel.messageForeground = #313131
+AVInfoPanel.threatHeadingFont = DIALOG-BOLD-18
+AVInfoPanel.threatHeadingForeground = #ff9900
+AVInfoPanel.threatIcon = icons/av_threat.png
+AVInfoPanel.vendorIcon = icons/avg_logo_large.png
 
 TransferRendererResources.font = DIALOG-PLAIN-11
 TransferRendererResources.foreground = #313131
