implemented AVG messages for scanning states

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -345,6 +345,7 @@ AVInfoPanel.vendorIcon = icons/avg_logo_large.png
 
 TransferRendererResources.font = DIALOG-PLAIN-11
 TransferRendererResources.foreground = #313131
+TransferRendererResources.disabledForeground = #898989
 TransferRendererResources.progressBarWidth =  150
 TransferRendererResources.progressBarHeight =  10
 #the progress bar disappears when the column width is less than cutoff width
