--- a/.classpath
+++ b/.classpath
@@ -91,7 +91,6 @@
 	<classpathentry kind="lib" path="lib/jars/jl.jar"/>
 	<classpathentry kind="lib" path="lib/jars/jogg.jar"/>
 	<classpathentry kind="lib" path="lib/jars/jorbis.jar"/>
-	<classpathentry kind="lib" path="lib/jars/mp3spi.jar"/>
 	<classpathentry kind="lib" path="lib/jars/tritonus.jar"/>
 	<classpathentry kind="lib" path="lib/jars/vorbisspi.jar"/>
 	<classpathentry kind="lib" path="lib/jars/windows/iTunes-0.0.1.jar"/>
@@ -157,5 +156,6 @@
 	<classpathentry kind="lib" path="lib/jars/jaudiotagger-1.0.9.1.jar"/>
 	<classpathentry kind="lib" path="lib/jars/foxtrot-core-3.0.jar" sourcepath="lib/sources/foxtrot-3.0.zip"/>
 	<classpathentry kind="lib" path="lib/jars/fmj-20091008-6.jar" sourcepath="lib/sources/fmj-source.zip"/>
+	<classpathentry kind="lib" path="lib/jars/mp3spi-1.9.4.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
