LWC-4594 "When in full screen video, only have an "exit full screen" button...no exit video button." -- I removed the exit video button from the full screen view.  I replaced the existing full screen icon with two new icons Roscoe made, and the full screen icon button no longer behaves like a toggle button.

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -735,8 +735,8 @@ MiniPlayerPanel.playIconRollover = icons/player/player_play_hover.png
 MiniPlayerPanel.foregroundColor = #000000
 MiniPlayerPanel.font = DIALOG-PLAIN-11
 
-VideoPanel.fullScreenSelected = icons/player_fullscreen.png
-VideoPanel.fullScreenUnselected = icons/player_fullscreen.png
+VideoPanel.fullScreenSelected = icons/fullscreen_close.png
+VideoPanel.fullScreenUnselected = icons/fullscreen_open.png
 VideoPanel.close = icons/close_large.png
 
 VolumeSlider.background = #b6b6b6
