AV download states for Gnutella (BitTorrent to follow).
Removed the unused NOT_SCANNED state and added a SCAN_FAILED state for AV errors (which will never happen, of course). Changed the behaviour of dangerous downloads to be more consistent with infected downloads.

Much refactoring remains, but the behaviour seems to be correct.

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -340,7 +340,9 @@ AVInfoPanel.messageFont = DIALOG-PLAIN-11
 AVInfoPanel.messageForeground = #313131
 AVInfoPanel.threatHeadingFont = DIALOG-BOLD-18
 AVInfoPanel.threatHeadingForeground = #ff9900
-AVInfoPanel.threatIcon = icons/av_threat.png
+// FIXME: missing icon
+// AVInfoPanel.threatIcon = icons/av_threat.png
+AVInfoPanel.threatIcon = icons/warning.png
 AVInfoPanel.vendorIcon = icons/avg_logo_large.png
 
 TransferRendererResources.font = DIALOG-PLAIN-11
