--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -340,9 +340,7 @@ AVInfoPanel.messageFont = DIALOG-PLAIN-11
 AVInfoPanel.messageForeground = #313131
 AVInfoPanel.threatHeadingFont = DIALOG-BOLD-18
 AVInfoPanel.threatHeadingForeground = #ff9900
-// FIXME: missing icon
-// AVInfoPanel.threatIcon = icons/av_threat.png
-AVInfoPanel.threatIcon = icons/warning.png
+AVInfoPanel.threatIcon = icons/av_threat.png
 AVInfoPanel.vendorIcon = icons/avg_logo_large.png
 
 TransferRendererResources.font = DIALOG-PLAIN-11
