--- a/components/common/dependencies.props
+++ b/components/common/dependencies.props
@@ -54,6 +54,7 @@ mozdom4java.version=
 MozillaInterfaces.version=1.9
 MozillaGlue.version=1.9
 mozswing.version=
+mp3spi.version=1.9.4.1
 objensis.version=
 org.mortbay.jetty.version=5.1.12
 onion-common.version=
