--- a/.classpath
+++ b/.classpath
@@ -156,6 +156,6 @@
 	<classpathentry kind="lib" path="lib/jars/jaudiotagger-1.0.9.1.jar"/>
 	<classpathentry kind="lib" path="lib/jars/foxtrot-core-3.0.jar" sourcepath="lib/sources/foxtrot-3.0.zip"/>
 	<classpathentry kind="lib" path="lib/jars/mp3spi-1.9.4.1.jar"/>
-	<classpathentry kind="lib" path="lib/jars/fmj-20091008-9.jar" sourcepath="lib/sources/fmj-source.zip"/>
+	<classpathentry kind="lib" path="lib/jars/fmj-20091008-10.jar" sourcepath="lib/sources/fmj-source.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
