updated threat heading color

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -339,7 +339,7 @@ AVInfoPanel.headingForeground = #313131
 AVInfoPanel.messageFont = DIALOG-PLAIN-11
 AVInfoPanel.messageForeground = #313131
 AVInfoPanel.threatHeadingFont = DIALOG-BOLD-18
-AVInfoPanel.threatHeadingForeground = #ff9900
+AVInfoPanel.threatHeadingForeground = #e88312
 AVInfoPanel.threatIcon = icons/av_threat.png
 AVInfoPanel.vendorIcon = icons/avg_logo_large.png
 
