--- a/components/gnutella-core/ivy.xml
+++ b/components/gnutella-core/ivy.xml
@@ -50,6 +50,7 @@
         <dependency org="none" name="guice" rev="${guice.version}" conf="compile,runtime"/>
         <dependency org="none" name="mime-util" rev="${mime-util.version}" conf="compile,runtime"/>
         <dependency org="none" name="jna" rev="${jna.version}" conf="compile,runtime"/>
+        <dependency org="none" name="windows/jacob" rev="${jacob.version}" conf="compile,runtime"/> <!-- todo: scope to windows only -->
         
         <dependency org="org.limewire" name="common" rev="latest.integration" conf="test, test-common->master(*), test-common"/>
         <dependency org="org.limewire" name="swarm" rev="latest.integration" conf="test"/>
